# kprotect

./: .gitignore  Cargo.toml  LICENSE  README.md  kprotect.desktop
.github/: FUNDING.yml
kprotect-cli/: Cargo.toml
kprotect-cli/src/: main.rs
kprotect-client/: Cargo.toml
kprotect-client/examples/: test_client.rs
kprotect-client/src/: lib.rs
kprotect-common/: Cargo.toml
kprotect-common/src/: lib.rs  path_matcher.rs
kprotect-daemon/: Cargo.toml  test_protocol_v3.sh
kprotect-daemon/debian/: postinst  postrm  preinst  prerm
kprotect-daemon/src/: config.rs  crypto.rs  logger.rs  main.rs  migration.rs  notifications.rs  state.rs  username_helper.rs
kprotect-daemon/src/core/: auth.rs  domain.rs  domain.rs.bak  mod.rs  process.rs
kprotect-daemon/src/ebpf/: events.rs  manager.rs
kprotect-daemon/src/server/: api.rs  mod.rs  startup.rs
kprotect-data/honey-store/: default_env
kprotect-data/policies/: authorized_chains.json  enrichment_patterns.json  zones.json
kprotect-ebpf/: Cargo.toml
kprotect-ebpf/.cargo/: config.toml
kprotect-ebpf/src/: main.rs  vmlinux.rs
kprotect-tui/: Cargo.toml
kprotect-tui/src/: app.rs  integration_test.rs  main.rs  ui.rs
kprotect-ui/: index.html  package-lock.json  package.json
kprotect-ui/src/: App.css  App.tsx  App.tsx.backup  main.tsx  types.ts
kprotect-ui/src-tauri/: Cargo.toml  tauri.conf.json
kprotect-ui/src-tauri/icons/: icon.icns
kprotect-ui/src-tauri/src/: lib.rs  main.rs
kprotect-ui/src/api/: index.ts
kprotect-ui/src/components/: AuthorizedPatterns.tsx  ContextualUnlock.tsx  Dashboard.tsx  EventList.tsx  Layout.tsx  RootSessionWarning.tsx
kprotect-ui/src/context/: GlobalContext.tsx
kprotect-ui/src/pages/: Dashboard.tsx  Notifications.tsx  Policies.tsx  Settings.tsx
scripts/: build_deb.sh  build_gui.sh  install.sh  kprotect.service  uninstall.sh
xtask/: Cargo.toml
xtask/src/: main.rs
