[package]
name = "kprotect-cli"
version = "0.1.0-beta"
edition = "2021"

[[bin]]
name = "kprotect-cli"
path = "src/main.rs"

[dependencies]
kprotect-client = { path = "../kprotect-client" }
kprotect-common = { path = "../kprotect-common" }
clap = { version = "4", features = ["derive", "color"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
tabled = "0.15"
colored = "2"
libc = "0.2.178"
chrono = "0.4.42"
