[package]
name = "kprotect-client"
version = "0.1.0-beta"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
kprotect-common = { path = "../kprotect-common" }
