[package]
name = "kprotect-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kprotect"
path = "src/main.rs"

[dependencies]
kprotect-common = { path = "../kprotect-common" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.35", features = ["full"] }
aya = { version = "0.13.1", features = ["async_tokio"] }
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
nix = { version = "0.29", features = ["fs", "mount", "sched", "socket", "user"] }
libc = "0.2"
reqwest = { version = "0.11", features = ["json"] }

# Encryption dependencies
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[package.metadata.deb]
name = "kprotect"
maintainer = "khoinp1012 <khoinp1012@gmail.com>"
copyright = "2026, khoinp1012"
license-file = ["../LICENSE", "4"]
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["../target/release/kprotect", "usr/bin/kprotect-daemon", "755"],
    ["../target/release/kprotect-cli", "usr/bin/kprotect-cli", "755"],
    ["../scripts/kprotect.service", "lib/systemd/system/kprotect.service", "644"],
]
maintainer-scripts = "debian/"
# conf-files removed as /etc/kprotect is unused
systemd-units = { unit-name = "kprotect", enable = true, start = true }

[build-dependencies]
