[package]
name = "kprotect-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
kprotect-client = { path = "../kprotect-client" }
kprotect-common = { path = "../kprotect-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "kprotect-tui"
path = "src/main.rs"
